<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Seletor">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="421dp"
        android:layout_height="65dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/azul_escuro"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="monospace"
            android:padding="10dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/branco"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/view_main1"
        android:layout_width="429dp"
        android:layout_height="8dp"
        android:background="@color/azul_claro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="421dp"
        android:layout_height="65dp"
        android:background="@color/azul_escuro"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/view_main2"
            android:layout_width="429dp"
            android:layout_height="8dp"
            android:background="@color/azul_claro" />

        <TextView
            android:id="@+id/tv_footer"
            android:layout_width="211dp"
            android:layout_height="57dp"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/fecap"
            android:textAlignment="center"
            android:textColor="@color/branco"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_selecione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:text="@string/selecione"
        android:textAlignment="center"
        android:textColor="@color/azul_claro"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_main1" />

    <LinearLayout
        android:layout_width="407dp"
        android:layout_height="497dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <CheckBox
            android:id="@+id/cbCalabresa"
            android:layout_width="414dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="@string/calabresa"
            android:textAlignment="center"
            android:textColor="@color/azul_checkbox"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="157dp" />

        <CheckBox
            android:id="@+id/cbMarguerita"
            android:layout_width="414dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="@string/marguerita"
            android:textAlignment="center"
            android:textColor="@color/azul_checkbox"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="207dp" />

        <CheckBox
            android:id="@+id/cbQueijo"
            android:layout_width="414dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="@string/queijo"
            android:textAlignment="center"
            android:textColor="@color/azul_checkbox"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="357dp" />

        <CheckBox
            android:id="@+id/cbPortuguesa"
            android:layout_width="414dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="@string/portuguesa"
            android:textAlignment="center"
            android:textColor="@color/azul_checkbox"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="407dp" />

        <CheckBox
            android:id="@+id/cbFrango"
            android:layout_width="414dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="@string/frango"
            android:textAlignment="center"
            android:textColor="@color/azul_checkbox"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="257dp" />

        <CheckBox
            android:id="@+id/cbChocolate"
            android:layout_width="414dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="@string/chocolate"
            android:textAlignment="center"
            android:textColor="@color/azul_checkbox"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="307dp" />

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:backgroundTint="@color/azul_claro"
            android:fontFamily="monospace"
            android:padding="10dp"
            android:text="@string/btnContinuar"
            android:textAlignment="center"
            android:textColor="@color/branco"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

