<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResumoPedido">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="421dp"
        android:layout_height="20dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/azul_escuro"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-1dp">

    </LinearLayout>

    <View
        android:id="@+id/view_main1"
        android:layout_width="429dp"
        android:layout_height="4dp"
        android:background="@color/azul_claro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="421dp"
        android:layout_height="20dp"
        android:background="@color/azul_escuro"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/view_main2"
            android:layout_width="429dp"
            android:layout_height="4dp"
            android:background="@color/azul_claro" />

    </LinearLayout>

    <TextView
        android:id="@+id/resumo"
        android:layout_width="413dp"
        android:layout_height="48dp"
        android:fontFamily="monospace"
        android:text="@string/resumo"
        android:textAlignment="center"
        android:textColor="@color/azul_claro"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sabores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.395" />

    <TextView
        android:id="@+id/sabores"
        android:layout_width="413dp"
        android:layout_height="48dp"
        android:fontFamily="monospace"
        android:text="@string/itens"
        android:textAlignment="center"
        android:textColor="@color/azul_claro"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pizzaIntent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/pizzaIntent"
        android:layout_width="410dp"
        android:layout_height="247dp"
        android:fontFamily="monospace"
        android:text="@string/intentPizza"
        android:textAlignment="center"
        android:textColor="@color/azul_checkbox"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.271" />

    <TextView
        android:id="@+id/tamanhoResumo"
        android:layout_width="414dp"
        android:layout_height="37dp"
        android:fontFamily="monospace"
        android:text="@string/tamanhoResumo"
        android:textAlignment="center"
        android:textColor="@color/azul_claro"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaIntent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tamanhoIntent"
        android:layout_width="411dp"
        android:layout_height="75dp"
        android:fontFamily="monospace"
        android:text="@string/intentTamanho"
        android:textAlignment="center"
        android:textColor="@color/azul_checkbox"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tamanhoResumo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/pagamentoResumo"
        android:layout_width="410dp"
        android:layout_height="40dp"
        android:fontFamily="monospace"
        android:text="@string/pagamentoResumo"
        android:textAlignment="center"
        android:textColor="@color/azul_claro"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tamanhoIntent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/pagamentoIntent"
        android:layout_width="413dp"
        android:layout_height="48dp"
        android:fontFamily="monospace"
        android:text="@string/intentTamanho"
        android:textAlignment="center"
        android:textColor="@color/azul_checkbox"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamentoResumo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/valorResumo"
        android:layout_width="411dp"
        android:layout_height="38dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="monospace"
        android:text="@string/valorResumo"
        android:textAlignment="center"
        android:textColor="@color/azul_claro"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamentoIntent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/valorIntent"
        android:layout_width="413dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="monospace"
        android:text="@string/intentTamanho"
        android:textAlignment="center"
        android:textColor="@color/azul_checkbox"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="342dp"
        android:layout_height="62dp"
        android:layout_weight="1"
        android:backgroundTint="@color/azul_claro"
        android:fontFamily="monospace"
        android:onClick="voltar"
        android:padding="10dp"
        android:text="@string/btnVoltar"
        android:textAlignment="center"
        android:textColor="@color/branco"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.969" />


</androidx.constraintlayout.widget.ConstraintLayout>